build(tox): tox.ini -> pyproject.toml, requires tox 4.22+
Includes collateral workflow changes due to tox version and config update.

--- a/.github/workflows/build_inc.yml
+++ b/.github/workflows/build_inc.yml
@@ -83,6 +83,5 @@ jobs:
     - name: Run type checker on source
       run: >
         tox run-parallel -v
-        --parallel-no-spinner
-        -e mypy,pyright
+        -m typecheck
 
