--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,8 +46,8 @@ homepage = 'https://github.com/abelcheung/types-lxml'
 test = [
     'tox ~= 4.22',
     'mypy ~= 1.11',
-    # https://github.com/microsoft/pyright/issues/9286
-    'pyright >= 1.1.386',
+    # microsoft/pyright#9286 and microsoft/pyright#9296
+    'pyright >= 1.1.387',
     'typeguard >= 3.0; python_full_version < "3.12.4"',
     'typeguard >= 4.3.0; python_full_version >= "3.12.4"',
     'pytest >= 7.0, < 9',
@@ -65,7 +65,7 @@ basic = [
     "cssselect == 1.2.0",
 ]
 mypy    = ["mypy == 1.11.2"]
-pyright = ["pyright == 1.1.386"]
+pyright = ["pyright == 1.1.387"]
 format  = ["ruff ~= 0.6"]
 stub-test = [
     "pytest-mypy-plugins == 3.1.2",
