--- a/.github/workflows/build_inc.yml
+++ b/.github/workflows/build_inc.yml
@@ -36,6 +36,7 @@ jobs:
       run: >
         uvx
         --python-preference only-system
+        --with tox-uv
         tox@4.23.2
         run -v
         -e build-${{ matrix.flavor }}
@@ -47,6 +48,7 @@ jobs:
       run: >
         uvx
         --python-preference only-system
+        --with tox-uv
         tox@4.23.2
         run -v
         -e build-${{ matrix.flavor }}
@@ -87,6 +89,7 @@ jobs:
       run: >
         uvx
         --python-preference only-system
+        --with tox-uv
         tox@4.23.2
         run-parallel -vv
         -m typecheck
