--- a/.github/workflows/test_inc.yml
+++ b/.github/workflows/test_inc.yml
@@ -48,6 +48,7 @@ jobs:
         -p ${{ matrix.pyver }}
         --python-preference only-managed
         --with "tox-gh-actions == 3.2.0"
+        --with tox-uv
         tox@4.23.2 run -v
         --skip-env='.*-rt-.*'
         --result-json test-${{ inputs.flavor }}-stub-py${{ matrix.pyver }}.json
@@ -90,14 +91,27 @@ jobs:
         cache-dependency-glob: |
           ./pyproject.toml
 
-    # Trigger npm install pyright once, otherwise
+    - name: Install prerequisites
+      run: >
+        uv tool install
+        -p ${{ matrix.pyver }}
+        --python-preference only-managed
+        --with "tox-gh-actions == 3.2.0"
+        --with tox-uv
+        tox@4.23.2
+
+    # 1. Trigger npm install pyright once, otherwise
     # tox run-parallel would cause multiple concurrent
     # installation into same location and fail
     # RobertCraigie/pyright-python#318
-    - name: Install prerequisites
+    # 2. Tox-uv wreak havoc on the platform that needs it
+    # most (Windows) under concurrent cache access. So
+    # prepare the venvs one by one and only do tests
+    # in parallel.
+    - name: Prepare test environment
       run: |
-        uv tool install -p ${{ matrix.pyver }} --python-preference only-managed --with "tox-gh-actions == 3.2.0" tox@4.23.2
         uvx tox run -e pyright -- --version
+        uvx tox run -v --skip-env='.*-stub$' --notest
 
     - name: Test runtime
       run: >
