--- a/.github/workflows/compat.yml
+++ b/.github/workflows/compat.yml
@@ -28,8 +28,7 @@ jobs:
 
       - name: Install prerequisites
         run: |
-          uv python install 3.10
-          uv venv --python-preference only-managed
+          uv venv --python-preference only-system
           uv pip install -r pyproject.toml
           uv pip install 'mypy == ${{ matrix.myver }}'
 
@@ -43,6 +42,42 @@ jobs:
       fail-fast: false
       matrix:
         prver:
+          - 1.1.350
+          - 1.1.351
+          - 1.1.352
+          - 1.1.353
+          - 1.1.354
+          - 1.1.355
+          - 1.1.356
+          - 1.1.357
+          - 1.1.358
+          - 1.1.359
+          - 1.1.360
+          - 1.1.361
+          - 1.1.362
+          - 1.1.363
+          - 1.1.364
+          - 1.1.365
+          - 1.1.366
+          - 1.1.367
+          - 1.1.368
+          - 1.1.369
+          - 1.1.370
+          - 1.1.371
+          - 1.1.372
+          - 1.1.373
+          - 1.1.374
+          - 1.1.375
+          - 1.1.376
+          - 1.1.377
+          - 1.1.378
+          - 1.1.379
+          - 1.1.380
+          - 1.1.381
+          - 1.1.382
+          - 1.1.383
+          - 1.1.384
+          - 1.1.385
           - 1.1.386
           - 1.1.387
     runs-on: ubuntu-22.04
@@ -58,9 +93,25 @@ jobs:
 
       - name: Install prerequisites
         run: |
-          uv python install 3.10
-          uv venv --python-preference only-managed
+          uv venv -p 3.10 --python-preference only-system
           uv pip install -r pyproject.toml
+          uv pip install tomli
+
+      # HACK Only pyright 1.1.386+ is capable of parsing
+      # current pyproject.toml which incorporated tox
+      # config. Generate pyright config on-the-fly to
+      # make sure pyright compatibility check is not
+      # hindered by config issues.
+      - name: Generate pyright config
+        uses: aorizondo/run-python-script-action@e4af956c603ae6572eb93bb261aca2a3bc59116a
+        with:
+          python-binary: .venv/bin/python3
+          script: |
+            import tomli, json
+            with open('pyproject.toml', 'rb') as f:
+              cfg = tomli.load(f)
+            with open('pyrightconfig.json', 'w') as f:
+              json.dump(cfg['tool']['pyright'], f)
 
       - uses: jakebailey/pyright-action@v2
         with:
