--- a/test-rt/rttest-mypy.ini
+++ b/test-rt/rttest-mypy.ini
@@ -2,36 +2,38 @@
 explicit_package_bases = True
 strict = True
 pretty = False
-warn_redundant_casts = False
 
-# Useless, mypy just appends an error, all vars are still
-# dumped as typing.Any anyway
-# disallow_any_unimported = True
-
-# Certain tests or statements have to be disabled
-# for mypy. INJECT_REVEAL_TYPE is intentional, but
-# all others are deficiencies of mypy.
+# Some error codes are so frequently emitted by mypy
+# that it is more convenient to disable globally.
 #
-# -- TC_CAN_ASSIGN_DIFFERENT_TYPE
+# -- assignment
 # Lxml can normalize unicode and byte strings upon
 # certain attribute assignments, and outputs a single
 # type. Mypy slams door upon such assignments, where
 # input and output type for attribute are unidentical.
-# See python/mypy#3004 for further discussion (since 2017).
+# See python/mypy#3004 for further discussion.
 # Earlier days mypy emits error directly when checking
 # annotation files, now they pretend no error exists in
 # annotation, yet becomes fatal whenever one uses such
 # pattern in real python code.
 #
-# -- TC_CAN_RETURN_NONE
-# Mypy bans assigning result to func that doesn't return value.
-# Even after disabling error code, the result type would be
-# typing.Any, not None. As an extension, even None assertion
-# statements are disallowed in mypy.
+# -- func-returns-value
+# Mypy bans assigning result to func that doesn't return
+# value; it even go as far as banning None assertion
+# statements frequently used in tests.
+
+disable_error_code = func-returns-value, assignment
+
+# In some other cases, tests have to be altered in
+# alternative form for mypy to be functional.
+# INJECT_REVEAL_TYPE is intentional, but others are
+# deficiencies of mypy.
 #
 # -- TC_HONORS_REVERSED
 # Mypy thinks reversed(T) always produce reversed object,
-# ignoring annotation completely. Not for lxml.
-# Mypy groks T.__reversed__() however.
+# ignoring annotation completely.
+# Mypy groks T.__reversed__() however, just not honoring
+# the fact that reversed(T) is T.__reversed__() if
+# available.
 
-always_false = TC_CAN_ASSIGN_DIFFERENT_TYPE,TC_CAN_RETURN_NONE,TC_HONORS_REVERSED,INJECT_REVEAL_TYPE
+always_false = TC_HONORS_REVERSED,INJECT_REVEAL_TYPE
