ci(tox): Disable parallel test in Windows
uv and tox-uv only helps non-Windows platform. Concurrent cache access
from multiple tox env causes random OSError in multiple pre-test
stages.

--- a/.github/workflows/test_inc.yml
+++ b/.github/workflows/test_inc.yml
@@ -108,18 +108,13 @@ jobs:
         --with tox-uv
         tox@4.23.2
 
-    # 1. Trigger npm install pyright once, otherwise
+    # Trigger npm install pyright once, otherwise
     # tox run-parallel would cause multiple concurrent
     # installation into same location and fail
     # RobertCraigie/pyright-python#318
-    # 2. Tox-uv wreak havoc on the platform that needs it
-    # most (Windows) under concurrent cache access. So
-    # prepare the venvs one by one and only do tests
-    # in parallel.
     - name: Prepare test environment
       run: |
         uvx tox run -e pyright -- --version
-        uvx tox run -v --skip-env='.*-stub$' --notest
 
     # Glob not supported under default windows env
     - name: Determine wheel file name
@@ -129,9 +124,23 @@ jobs:
         echo "filename=$(echo dist/*.whl)" >> "$GITHUB_OUTPUT"
 
     - name: Test runtime
+      if: runner.os != 'Windows'
       run: >
         uvx
         tox run-parallel -vv
+        --skip-env='.*-stub$'
+        --installpkg ${{ steps.wheel-name.outputs.filename }}
+        --result-json test-${{ inputs.flavor }}-rt-${{ matrix.os }}-py${{ matrix.pyver }}.json
+
+    # Tox-uv wreak havoc on the platform that needs it
+    # most (Windows) under concurrent cache access,
+    # which can potentially occur at every tox setup
+    # steps before pytest. No workaround so far.
+    - name: Test runtime (serially)
+      if: runner.os == 'Windows'
+      run: >
+        uvx
+        tox run -v
         --skip-env='.*-stub$'
         --installpkg ${{ steps.wheel-name.outputs.filename }}
         --result-json test-${{ inputs.flavor }}-rt-${{ matrix.os }}-py${{ matrix.pyver }}.json
