--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,15 +96,12 @@ excludes = [
     '**/*.patch',
     '/*.py',
 ]
-source-includes = [
-    'test-rt/',
-]
 
 [tool.setuptools_scm]
 
 [tool.pyright]
 stubPath = 'src'
-extraPaths = ['test-rt']
+extraPaths = ['tests/runtime']
 typeCheckingMode = 'strict'
 reportPrivateUsage = false
 reportUnnecessaryTypeIgnoreComment = false
@@ -115,7 +112,6 @@ enableTypeIgnoreComments = false
 
 [tool.mypy]
 mypy_path = '$MYPY_CONFIG_FILE_DIR/src'
-packages = 'lxml-stubs'
 strict = true
 show_error_context = true
 pretty = true
@@ -235,10 +231,12 @@ commands = [[
 [tool.tox._env_rt]
 package = 'wheel'
 wheel_build_env = '{package_env}'
-change_dir = '{tox_root}/test-rt'
-commands = [['pytest', {replace = 'posargs', default = ['.'], extend = true}]]
+commands = [[
+    'pytest',
+    {replace = 'posargs', default = ['tests/runtime'], extend = true}
+]]
 commands_pre = [
-    ['pyright', '--level', 'error', '.'],
+    ['pyright', '--level', 'error', 'tests/runtime'],
     # HACK Resort to mypy.api since command line doesn't know
     # how to dump to file or discard output, and tox doesn't
     # support shell semantics.
@@ -249,7 +247,7 @@ commands_pre = [
         'python', '-c',
         '''
 from mypy.api import run
-r=run(["--config-file=rttest-mypy.ini","."])
+r=run(["--config-file=tests/runtime/rttest-mypy.ini","tests/runtime"])
 for line in r[0].splitlines():
     if ": note:" not in line:
         print(line.strip())
