test: Mark slow tests
In particular, suppress healthcheck for hypothesis related ones

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,6 +147,9 @@ addopts = [
     "--tb=short",
     "--import-mode=importlib",
 ]
+markers = [
+    "slow: marks tests as slow",
+]
 
 [tool.tox]
 env_list = [
