feat: reveal_type replacement is now modelled like pytest plugin
Boilerplate code is no more necessary for test files to import reveal_type

--- a/tests/runtime/rttest-mypy.ini
+++ b/tests/runtime/rttest-mypy.ini
@@ -25,8 +25,6 @@ disable_error_code = func-returns-value, assignment
 
 # In some other cases, tests have to be altered in
 # alternative form for mypy to be functional.
-# INJECT_REVEAL_TYPE is intentional, but others are
-# deficiencies of mypy.
 #
 # -- TC_HONORS_REVERSED
 # Mypy thinks reversed(T) always produce reversed object,
@@ -35,4 +33,4 @@ disable_error_code = func-returns-value, assignment
 # the fact that reversed(T) is T.__reversed__() if
 # available.
 
-always_false = TC_HONORS_REVERSED,INJECT_REVEAL_TYPE
+always_false = TC_HONORS_REVERSED
