--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ classifiers = [
     'Programming Language :: Python :: 3.12',
     'Programming Language :: Python :: 3.13',
     'Typing :: Stubs Only',
+    'License :: OSI Approved :: Apache Software License',
+    'Operating System :: OS Independent',
 ]
 
 [project.urls]
