config(mypy): Disable warn_unused_ignores in tests too
Newer mypy version may add or subtract type-ignores which are invalid for older versions

--- a/tests/runtime/mypy.ini
+++ b/tests/runtime/mypy.ini
@@ -1,6 +1,7 @@
 [mypy]
 strict = True
 pretty = False
+warn_unused_ignores = False
 
 # Some error codes are so frequently emitted by mypy
 # that it is more convenient to disable globally.
